--- a/App/views/fdsmanager/deletepromotion.ejs
+++ b/App/views/fdsmanager/deletepromotion.ejs
@@ -26,6 +26,13 @@
 			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
+
+		<li><a href="/fdspromotionmanagement">Back to FDS Promotion Management Homepage</a></li>
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
 		
 		<script>
 			(function() {
