--- a/App/views/fdsmanager/fdsone.ejs
+++ b/App/views/fdsmanager/fdsone.ejs
@@ -53,6 +53,13 @@
 			<% } %>
 		</tbody>
 	</table>
+
+	<div>
+        <form id="fdsHomepage" action="fdsHomepage" method="post">
+            <button type="submit" class="btn btn-primary">Home Page</button>
+        </form>
+    </div>
+
 </body>
 
 </html>
