--- a/App/views/fdsmanager/fdspromotionmanagement.ejs
+++ b/App/views/fdsmanager/fdspromotionmanagement.ejs
@@ -41,5 +41,12 @@
 				<% } %>
 			</tbody>
 		</table>
+
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
+	
   </body>
 </html>
