--- a/App/views/fdsmanager/restaurantstaffmanagement.ejs
+++ b/App/views/fdsmanager/restaurantstaffmanagement.ejs
@@ -18,5 +18,12 @@
     <li><a href="/viewallrestaurantstaff" >View All Restaurant Staff</a></li>
     <li><a href="/addrestaurantstaff" >Add New Restaurant Staff</a></li>
     <li><a href="/deleterestaurantstaff" >Delete Restaurant Staff</a></li>
+
+    <div>
+      <form id="fdsHomepage" action="fdsHomepage" method="post">
+          <button type="submit" class="btn btn-primary">Home Page</button>
+      </form>
+  </div>
+
   </body>
 </html>
