--- a/App/views/fdsmanager/viewallrestaurantstaff.ejs
+++ b/App/views/fdsmanager/viewallrestaurantstaff.ejs
@@ -32,6 +32,14 @@
 				</tr>
 				<% } %>
 			</tbody>
-        </table>
+		</table>
+		
+		<li><a href="/restaurantstaffmanagement">Back to Restaurant Staff Management Homepage</a></li>
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
+		
   </body>
 </html>
