--- a/App/views/fdsmanager/viewwws.ejs
+++ b/App/views/fdsmanager/viewwws.ejs
@@ -55,6 +55,11 @@
         </tbody>
     </table>
     <li><a href="/shiftmanagement">Back to Shift Management Homepage</a></li>
+    <div>
+        <form id="fdsHomepage" action="fdsHomepage" method="post">
+            <button type="submit" class="btn btn-primary">Home Page</button>
+        </form>
+    </div>
 </body>
 
 </html>
