--- a/App/views/restaurants.ejs
+++ b/App/views/restaurants.ejs
@@ -35,6 +35,12 @@
 				<% } %>
 			</tbody>
         </table>
-        <li><a href="/restaurants/1">View McDonald's Details</a></li>
+		<li><a href="/restaurantmanagement">Back to Restaurant Management Homepage</a></li>
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
+
   </body>
 </html>
