--- a/App/views/fdsmanager/addrestaurantstaff.ejs
+++ b/App/views/fdsmanager/addrestaurantstaff.ejs
@@ -43,6 +43,7 @@
                 placeholder="Enter your Staff ID">
             <small id="matricHelp" class="form-text text-muted"></small>
         </div>
+
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name">
@@ -56,6 +57,13 @@
             <input type="text" class="form-control" id="password" name="password" placeholder="Enter Password">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+
+        <li><a href="/restaurantstaffmanagement">Back to Restaurant Staff Management Homepage</a></li>
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
     </form>
 
     <script>
