--- a/App/views/fdsmanager/deleterestaurantstaff.ejs
+++ b/App/views/fdsmanager/deleterestaurantstaff.ejs
@@ -26,9 +26,17 @@
 			</div>
 			<div class="form-group">
 				<label for="username">Username</label>
-				<input type="text" class="form-control" id="username" name="username" placeholder="Enter Staff Userame">
+				<input type="text" class="form-control" id="username" name="username" placeholder="Enter Staff Username">
 			</div>
 			<button type="submit" class="btn btn-primary">Submit</button>
+
+			<li><a href="/restaurantstaffmanagement">Back to Restaurant Staff Management Homepage</a></li>
+			<div>
+				<form id="fdsHomepage" action="fdsHomepage" method="post">
+					<button type="submit" class="btn btn-primary">Home Page</button>
+				</form>
+			</div>
+			
 		</form>
 		
 		<script>
