--- a/App/views/fdsmanager/fdspromotions.ejs
+++ b/App/views/fdsmanager/fdspromotions.ejs
@@ -37,5 +37,12 @@
 				<% } %>
 			</tbody>
 		</table>
+
+		<li><a href="/fdspromotionmanagement">Back to FDS Promotion Management Homepage</a></li>
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
   </body>
 </html>
