--- a/App/views/fdsmanager/restaurantmanagement.ejs
+++ b/App/views/fdsmanager/restaurantmanagement.ejs
@@ -17,5 +17,12 @@
     <h1>Restaurant Management Page</h1>
     <li><a href="/restaurants" >View All Restaurants</a></li>
     <li><a href="/addrestaurant" >Add New Restaurants</a></li>
+
+    <div>
+      <form id="fdsHomepage" action="fdsHomepage" method="post">
+          <button type="submit" class="btn btn-primary">Home Page</button>
+      </form>
+  </div>
+
   </body>
 </html>
