--- a/App/views/fdsmanager/viewshifts.ejs
+++ b/App/views/fdsmanager/viewshifts.ejs
@@ -23,17 +23,10 @@
 </head>
 
 <body>
-	<form id="addshift" action="viewshifts" method="post">
+	<!-- <form id="addshift" action="viewshifts" method="post">
 		<input type="hidden" name="date" value="<%= date%>"> 
-		<!-- small problem here because when viewing all shifts, title is passed over instead -->
 		<button type="submit" class="btn btn-primary">Create New Shift</button>
-	</form>
-	<!-- this shouldnt direct to my addshift page, it should direct to some other place that can take in 
-	this button value through POST METHOD.
-or maybe we pass to addShift's post method and update it there? 
-shit but then the post method is alraedy used to create the shift ? unless i make two different post methods then
-i think answer is to pass this date into some post method somewhere, then render and pass the date into that form. pass that date into 
-the form, so that user doesnt have to input the date and can just directly use that date in the form, we do something -->
+	</form> -->
 
 	<h1>Shifts on <%= date%></h1>
 	<table class="table">
@@ -58,6 +51,10 @@ the form, so that user doesnt have to input the date and can just directly use t
 			<% } %>
 		</tbody>
 	</table>
+
+	
+	<li><a href="/viewwws">Back to All Weekly Schedules</a></li>
+	<li><a href="/shiftmanagement">Back to Shift Management Homepage</a></li>
 </body>
 
 </html>
