--- a/App/views/fdsmanager/adddriverwws.ejs
+++ b/App/views/fdsmanager/adddriverwws.ejs
@@ -29,14 +29,14 @@
 				</select>
 			</div>
 			
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label for="wwsid">WWS ID</label>
 				<input type="number" class="form-control" id="wwsid" name="wwsid" placeholder="Enter Weekly Schedule ID from 3">
 			</div>
 			<div class="form-group">
 				<label for="mwsid">MWS ID</label>
 				<input type="number" class="form-control" id="mwsid" name="mwsid" placeholder="Enter Monthly Schedule ID from 2">
-            </div>
+            </div> -->
             <!-- <div class="form-group">
 				<label for="uid">Driver ID</label>
 				<input type="text" class="form-control" id="uid" name="uid" placeholder="Enter Driver ID">
