--- a/App/views/fdsmanager/adddriverwws.ejs
+++ b/App/views/fdsmanager/adddriverwws.ejs
@@ -42,8 +42,8 @@
 				<input type="text" class="form-control" id="uid" name="uid" placeholder="Enter Driver ID">
 			</div> -->
 			<div class="form-group">
-				<label for="startdate">Starting Date </label>
-				<input type="text" class="form-control" id="startdate" name="startdate" placeholder="Enter Start Date">
+				<label for="startdate">Starting Date (First Monday) </label>
+				<input type="date" class="form-control" id="startdate" name="startdate" placeholder="Enter Start Date">
             </div>
 			<button type="submit" class="btn btn-primary">Submit</button>
         </form>
