--- a/App/views/fdsmanager/addfdspromotion.ejs
+++ b/App/views/fdsmanager/addfdspromotion.ejs
@@ -35,11 +35,11 @@
 			</div>
 			<div class="form-group">
 				<label for="price">Start Date:</label>
-				<input type="text" step="0.01" class="form-control" id="startDate" name="startDate" placeholder="Enter Start Date (YYYY-MM-DD)">
+				<input type="date" step="0.01" class="form-control" id="startDate" name="startDate" placeholder="Enter Start Date (YYYY-MM-DD)">
             </div>
             <div class="form-group">
 				<label for="price">End Date:</label>
-				<input type="text" step="0.01" class="form-control" id="endDate" name="endDate" placeholder="Enter End Date (YYYY-MM-DD)">
+				<input type="date" step="0.01" class="form-control" id="endDate" name="endDate" placeholder="Enter End Date (YYYY-MM-DD)">
             </div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
