--- a/App/views/fdsmanager/addptwws.ejs
+++ b/App/views/fdsmanager/addptwws.ejs
@@ -29,17 +29,17 @@
 				</select>
 			</div>
 			
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label for="wwsid">WWS ID</label>
 				<input type="number" class="form-control" id="wwsid" name="wwsid" placeholder="Enter Weekly Schedule ID from 3">
             </div>
             <div class="form-group">
 				<label for="sid">Starting Shift ID</label>
 				<input type="number" class="form-control" id="sid" name="sid" placeholder="Enter Shift ID from 11">
-			</div>
+			</div> -->
 			<div class="form-group">
-				<label for="startdate">Starting Date </label>
-				<input type="text" class="form-control" id="startdate" name="startdate" placeholder="Enter Start Date">
+				<label for="startdate">Starting Date (Monday)</label>
+				<input type="date" class="form-control" id="startdate" name="startdate" placeholder="Enter Start Date">
             </div>
 			<button type="submit" class="btn btn-primary">Submit</button>
         </form>
