--- a/App/views/fdsmanager/addshift.ejs
+++ b/App/views/fdsmanager/addshift.ejs
@@ -56,11 +56,11 @@
 
 		<div class="form-group">
 			<label for="starttime">Start Time </label>
-			<input type="number" class="form-control" id="starttime" name="starttime" placeholder="Enter Start Time">
+			<input type="number" class="form-control" id="starttime" name="starttime" placeholder="Enter Start Time" min="1000" max="2100">
 		</div>
 		<div class="form-group">
 			<label for="endtime">End Time </label>
-			<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time">
+			<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time"  min="1100" max="2200">
 		</div>
 		<div class="form-group">
 			<input type="hidden" class="form-control" id="firstdayofweek" name="firstdayofweek"
