--- a/App/views/driver/viewWorkSchedule.ejs
+++ b/App/views/driver/viewWorkSchedule.ejs
@@ -38,8 +38,9 @@
 			<% for(var i=0; i<data.length; i++) { %>
 			<tr>
                 <td><%= data[i].wwsid%></td>
+                <% var wwsid = data[i].wwsid %>
                 <td><%= data[i].startdate%></td>
-                <td><a href="/viewShifts2/<%= uid%>">View Shifts</a></td>
+                <td><a href="/viewShifts2/<%= wwsid%>">View Shifts</a></td>
 			</tr>
 			<% } %>
 		</tbody>
