--- a/App/views/fdsmanager/addcategory.ejs
+++ b/App/views/fdsmanager/addcategory.ejs
@@ -18,30 +18,13 @@
   </head>
   <body>
 	<h1><%= title%></h1>
-	<h1><%= errormessage%></h1>
 	<p></p>
-		<form id="html_form" action="addfdspromotion" role="form" method="post">
-            <!-- <div class="form-group">
-				<label for="fpid">FDS Promotion ID</label>
-				<input type="text" class="form-control" id="fpid" name="fpid" placeholder="Enter Promotion ID">
-			</div> -->
-			<input type="hidden" id="fpid" name="fpid" value=<%=data.rows[0].max%>>
+		<form id="html_form" action="addcategory" role="form" method="post">
             <div class="form-group">
-				<label for="name">Promotion Name:</label>
-				<input type="text" class="form-control" id="name" name="name" placeholder="Enter the Promotion Name">
+				<label for="name">Category Name:</label>
+				<input type="text" class="form-control" id="name" name="name" placeholder="Enter the Category Name">
 			</div>
-			<div class="form-group">
-				<label for="discountAmount">Discount Amount(%):</label>
-				<input type="number" class="form-control" id="discountAmount" name="discountAmount" placeholder="Enter Discount Amount" max="100">
-			</div>
-			<div class="form-group">
-				<label for="price">Start Date:</label>
-				<input type="date" step="0.01" class="form-control" id="startDate" name="startDate" placeholder="Enter Start Date (YYYY-MM-DD)">
-            </div>
-            <div class="form-group">
-				<label for="price">End Date:</label>
-				<input type="date" step="0.01" class="form-control" id="endDate" name="endDate" placeholder="Enter End Date (YYYY-MM-DD)">
-            </div>
+			
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 		
