--- a/App/views/fdsmanager/addshift.ejs
+++ b/App/views/fdsmanager/addshift.ejs
@@ -55,13 +55,49 @@
 		</div> -->
 
 		<div class="form-group">
+            Shift Start Time:
+            <select name="starttime" id="starttime">
+                <option value='1000'> 10am</option>
+                <option value='1100'> 11am</option>
+                <option value='1200'> 12pm</option>
+                <option value='1300'> 1pm</option>
+                <option value='1400'> 2pm</option>
+                <option value='1500'> 3pm</option>
+                <option value='1600'> 4pm</option>
+                <option value='1700'> 5pm</option>
+                <option value='1800'> 6pm</option>
+                <option value='1900'> 7pm</option>
+                <option value='2000'> 8pm</option>
+                <option value='2100'> 9pm</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            Shift End Time:
+            <select name="endtime" id="endtime">
+                <option value='1100'> 11am</option>
+                <option value='1200'> 12pm</option>
+                <option value='1300'> 1pm</option>
+                <option value='1400'> 2pm</option>
+                <option value='1500'> 3pm</option>
+                <option value='1600'> 4pm</option>
+                <option value='1700'> 5pm</option>
+                <option value='1800'> 6pm</option>
+                <option value='1900'> 7pm</option>
+                <option value='2000'> 8pm</option>
+                <option value='2100'> 9pm</option>
+                <option value='2200'> 10pm</option>
+            </select>
+		</div>
+		
+		<!-- <div class="form-group">
 			<label for="starttime">Start Time </label>
 			<input type="number" class="form-control" id="starttime" name="starttime" placeholder="Enter Start Time" min="1000" max="2100">
 		</div>
 		<div class="form-group">
 			<label for="endtime">End Time </label>
 			<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time"  min="1100" max="2200">
-		</div>
+		</div> -->
 		<div class="form-group">
 			<input type="hidden" class="form-control" id="firstdayofweek" name="firstdayofweek"
 				value="<%= firstdayofweek%>">
