--- a/App/views/fdsmanager/categorymanagement.ejs
+++ b/App/views/fdsmanager/categorymanagement.ejs
@@ -14,22 +14,39 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Welcome</h1>
-    <p>Home Page for FDS Managers</p>
-    
-    <li><a href="/categorymanagement">Food Category Management</a></li>
-    <li><a href="/fdspromotionmanagement">FDS Promotion Management</a></li>
-    <li><a href="/restaurantmanagement">Restaurant Management</a></li>
-    <li><a href="/restaurantstaffmanagement">Restaurant Staff Management</a></li>
-    <li><a href="/shiftmanagement"> Schedule Management</a></li>
-    <li><a href="/fdsone">FDS Manager Summary One</a></li>
-    <li><a href="/fdstwo">FDS Manager Summary Two</a></li>
-    <li><a href="/fdsthree">FDS Manager Summary Three</a></li>
+    <h1><%= title%></h1>
+    <h1><%= errormessage%></h1>
+	<li><a href="/addcategory">Create a new Food Category</a></li>
+	
+    <table class="table">
+			<thead>
+				<tr>
+					<th scope="col">Category ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Delete Category</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% for(var i=0; i<data.length; i++) { %>
+				<tr>
+					<td><%= data[i].cid%></td>
+                    <td><%= data[i].name%></td>
+                    <td>
+                        <form id="addshift" action="deletecategory" method="post">
+                            <input type="hidden" name="cid" value="<%= data[i].cid%>">
+                            <button type="submit" class="btn btn-primary">Delete Category</button>
+                        </form>
+                    </td>
+				</tr>
+				<% } %>
+			</tbody>
+		</table>
 
-
-    <li><a href="/drivers">View All Drivers</a></li>
-
-
-
+		<div>
+			<form id="fdsHomepage" action="fdsHomepage" method="post">
+				<button type="submit" class="btn btn-primary">Home Page</button>
+			</form>
+		</div>
+	
   </body>
 </html>
