view mws works, left view wws from mws

--- a/App/views/fdsmanager/shiftmanagement.ejs
+++ b/App/views/fdsmanager/shiftmanagement.ejs
@@ -27,6 +27,7 @@
     <li><a href="/adddriverwws">Generate a Schedule (by Month) for a FT Driver</a></li>
     <li><a href="/addptwws">Generate a Schedule (by Week) for a PT Driver</a></li>
     <li><a href="/viewwws">View all Weekly Schedules Created</a></li>
+    <li><a href="/viewmws">View all Monthly Schedules Created</a></li>
 
     <h6>Check for 5 minimum drivers</h6>
 
