--- a/App/views/createNewOrder/discounted.ejs
+++ b/App/views/createNewOrder/discounted.ejs
@@ -49,14 +49,19 @@
         </tbody>
     </table>
     <h1>Total Price: $<%=totalPrice%></h1>
-    <h1>With Discount: $<%= totalPrice * (1 - 0.001 * data[0].discountamount) %></h1>
-    
+    <% if (data.length != 0) { %>
+    <h1>With Discount: $<%= totalPrice * (1 - 0.01 * data[0].discountamount) %></h1>
+    <% } %>
+    <% if (data2.length != 0) { %>
+        <h1>With Discount: $<%= totalPrice * (1 - 0.01 * data2[0].discountamount) %></h1>
+    <% } %>
     <form id="form" action="chooseAddress" role="form" method="post">
         <input type="hidden" name="uid" value="<%= uid%>">
         <input type="hidden" name="rid" value="<%= rid%>">
         <input type="hidden" name="orders" value="<%= orders%>">
         <input type="hidden" name="orderDate" value="<%= orderDate%>">
         <input type="hidden" name="rpid" value="<%= rpid%>">
+        <input type="hidden" name="fpid" value="<%= fpid%>">
         <button type="submit" class="btn btn-primary">Confirm</button>
     </form>
     
