--- a/App/views/summaryInfo2.ejs
+++ b/App/views/summaryInfo2.ejs
@@ -36,7 +36,7 @@
 		<tbody>
 			<% for(var i=0; i<data.length; i++) { %>
 			<tr>
-                <td><%= month%></td>
+                <td><%= months[month]%></td>
                 <td><%= year%></td>
 				<td><%= data[i].totalorders%></td>
 				<td><%= data[i].totalcost%></td>
