--- a/App/views/fdsmanager/viewmws.ejs
+++ b/App/views/fdsmanager/viewmws.ejs
@@ -29,7 +29,7 @@
             <tr>
                 <th scope="col">Start Date</th>
                 <th scope="col">Driver ID</th>
-                <th scope="col">Driver Username</th>
+                <th scope="col">MWS ID</th>
             </tr>
         </thead>
         <tbody>
@@ -44,14 +44,8 @@
                     <li><a href="/wwsdetail/<%=dateString%>"><%= data[i].startdate.getDate()%>
                             <%= months[data[i].startdate.getMonth()]%> <%= data[i].startdate.getFullYear()%></a></li>
                 </td>
-                <td><%= data[i].uid%></td>
-                <td><%= data[i].username%></td>
-                <td>
-                    <form id="addshift" action="wwsdetail" method="post">
-                        <input type="hidden" name="weekstartdate" value="<%= dateString%>">
-                        <button type="submit" class="btn btn-primary">Create New Shift</button>
-                    </form>
-                </td>
+                <td><%=data[i].uid%></td>
+                <td><%data[i].mwsid%></td>
             </tr>
             <% } %>
         </tbody>
