--- a/App/views/fdsmanager/shiftmanagement.ejs
+++ b/App/views/fdsmanager/shiftmanagement.ejs
@@ -26,8 +26,9 @@
     <h1>Shift Management Page</h1>
     <li><a href="/adddriverwws">Generate a Schedule (by Month) for a FT Driver</a></li>
     <li><a href="/addptwws">Generate a Schedule (by Week) for a PT Driver</a></li>
-    <li><a href="/viewwws">View all Weekly Schedules Created</a></li>
+    <li><a href="/viewwws">View all Shifts created by Week</a></li>
     <li><a href="/viewmws">View all Monthly Schedules Created</a></li>
+    <li><a href="/mwsdetail">View all Weekly Schedules Created</a></li>
 
     <h6>Check for 5 minimum drivers</h6>
 
