touchup almost done

--- a/App/views/fdsmanager/adddriverwws.ejs
+++ b/App/views/fdsmanager/adddriverwws.ejs
@@ -28,19 +28,6 @@
 					<% } %>
 				</select>
 			</div>
-			
-			<!-- <div class="form-group">
-				<label for="wwsid">WWS ID</label>
-				<input type="number" class="form-control" id="wwsid" name="wwsid" placeholder="Enter Weekly Schedule ID from 3">
-			</div>
-			<div class="form-group">
-				<label for="mwsid">MWS ID</label>
-				<input type="number" class="form-control" id="mwsid" name="mwsid" placeholder="Enter Monthly Schedule ID from 2">
-            </div> -->
-            <!-- <div class="form-group">
-				<label for="uid">Driver ID</label>
-				<input type="text" class="form-control" id="uid" name="uid" placeholder="Enter Driver ID">
-			</div> -->
 			<div class="form-group">
 				<label for="startdate">Starting Date (First Monday) </label>
 				<input type="date" class="form-control" id="startdate" name="startdate" placeholder="Enter Start Date">
@@ -48,6 +35,8 @@
 			<button type="submit" class="btn btn-primary">Submit</button>
         </form>
 		
+		<li><a href="/shiftmanagement">Back to Shift Management Homepage</a></li>
+
 		<script>
 			(function() {
 				window.addEventListener('load', function() {
