--- a/App/views/fdsmanager/viewwws.ejs
+++ b/App/views/fdsmanager/viewwws.ejs
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h1><%= date%></h1>
+    <h1>All Shifts Created by Week</h1>
     <table class="table">
         <thead>
             <tr>
