--- a/App/views/fdsmanager/wwsdetail.ejs
+++ b/App/views/fdsmanager/wwsdetail.ejs
@@ -60,7 +60,7 @@ the form, so that user doesnt have to input the date and can just directly use t
 		</tbody>
 	</table>
 
-	<li><a href="/viewwws">Back to All Weekly Schedules</a></li>
+	<li><a href="/viewwws">Back to All Shifts</a></li>
 	<li><a href="/shiftmanagement">Back to Shift Management Homepage</a></li>
 </body>
 
