--- a/App/views/restaurantfooditems.ejs
+++ b/App/views/restaurantfooditems.ejs
@@ -44,7 +44,14 @@
 			<% } %>
 		</tbody>
 	</table>
-	<button type="button" onclick="GetURLParameter()">Delete Restaurant</button>
+
+	<li><a href="/restaurantmanagement">Back to Restaurant Management Homepage</a></li>
+	<div>
+		<form id="fdsHomepage" action="fdsHomepage" method="post">
+			<button type="submit" class="btn btn-primary">Home Page</button>
+		</form>
+	</div>
+	
 
 	<script>
 		function deleteFunction() {
