--- a/App/views/fdsmanager/shiftmanagement.ejs
+++ b/App/views/fdsmanager/shiftmanagement.ejs
@@ -26,11 +26,9 @@
     <h1>Shift Management Page</h1>
     <li><a href="/adddriverwws">Generate a Schedule (by Month) for a FT Driver</a></li>
     <li><a href="/addptwws">Generate a Schedule (by Week) for a PT Driver</a></li>
-    <li><a href="/viewwws">View all Shifts created by Week</a></li>
     <li><a href="/viewmws">View all Monthly Schedules Created</a></li>
     <li><a href="/mwsdetail">View all Weekly Schedules Created</a></li>
-
-    <h6>Check for 5 minimum drivers</h6>
+    <li><a href="/viewwws">View all Shifts created (Sorted by Week)</a></li>
 
     <form id="html_form" action="viewshifts" role="form" method="post">
         <div class="form-group">
@@ -51,35 +49,6 @@
         </form>
     </div>
 
-    <h5>Dont use stuff below here</h5>
-    <li><a href="/addwws">Generate a new WWS for All Drivers</a></li>
-
-
-
-
-    <!-- <h2>All Shifts created</h2>
-    <table class="table">
-		<thead>
-			<tr>
-				<th scope="col">Shift ID</th>
-				<th scope="col">Driver ID</th>
-				<th scope="col">Driver Name</th>
-				<th scope="col">Start Time</th>
-				<th scope="col">End Time</th>
-			</tr>
-		</thead>
-		<tbody>
-			<% for(var i=0; i<data.length; i++) { %>
-			<tr>
-				<td><%= data[i].sid%></td>
-				<td><%= data[i].uid%></td>
-				<td><%= data[i].name%></td>
-				<td><%= data[i].starttime%></td>
-				<td><%= data[i].endtime%></td>
-			</tr>
-			<% } %>
-		</tbody>
-	</table> -->
 </body>
 
 </html>
