--- a/App/views/fdsmanager/viewshifts.ejs
+++ b/App/views/fdsmanager/viewshifts.ejs
@@ -23,37 +23,36 @@
 </head>
 
 <body>
-	<!-- <form id="addshift" action="viewshifts" method="post">
-		<input type="hidden" name="date" value="<%= date%>"> 
-		<button type="submit" class="btn btn-primary">Create New Shift</button>
-	</form> -->
 
-	<h1>Shifts on <%= date%></h1>
+	<h1><%= title%> </h1>
 	<table class="table">
 		<thead>
 			<tr>
-				<th scope="col">Shift ID</th>
-				<th scope="col">Driver ID</th>
+				<th scope="col">Shift Date</th>
 				<th scope="col">Driver Name</th>
 				<th scope="col">Start Time</th>
 				<th scope="col">End Time</th>
+				<th scope="col">Shift ID</th>
+				<th scope="col">Driver ID</th>
+				<th scope="col">WWS ID</th>
 			</tr>
 		</thead>
 		<tbody>
 			<% for(var i=0; i<data.length; i++) { %>
 			<tr>
-				<td><%= data[i].sid%></td>
-				<td><%= data[i].uid%></td>
+				<td><%= data[i].day.getDate()%>
+					<%= months[data[i].day.getMonth()]%> <%= data[i].day.getFullYear()%></td>
 				<td><%= data[i].name%></td>
 				<td><%= data[i].starttime%></td>
 				<td><%= data[i].endtime%></td>
+				<td><%= data[i].sid%></td>
+				<td><%= data[i].uid%></td>
+				<td><%= data[i].wwsid%></td>
 			</tr>
 			<% } %>
 		</tbody>
 	</table>
 
-	
-	<li><a href="/viewwws">Back to All Weekly Schedules</a></li>
 	<li><a href="/shiftmanagement">Back to Shift Management Homepage</a></li>
 </body>
 
