--- a/App/views/driver/postTimeReachedRes.ejs
+++ b/App/views/driver/postTimeReachedRes.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
 		<!-- Page Title -->
-    <title>Deliver Order</title>
+    <title>Enter Time Reached Restaurant</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 		
 		<!-- CSS for Styling -->
@@ -18,16 +18,18 @@
   </head>
   <body>
 	<h1><%= title%></h1>
-		<form id="html_form" action="deliverOrder" role="form" method="post">
+
+        <form id="html_form" action="postTimeReachedRes" role="form" method="post">
 			<div class="form-group">
-				<label for="timeriderdeparts">Time Departed</label>
+				<label for="timeriderreachesrestaurant">Time Reached Restaurant</label>
 				<input type="hidden" name="oid" value="<%= oid%>">
-				<input type="datetime-local" class="form-control" id="timeriderdeparts" name="timeriderdeparts">
+				<input type="datetime-local" class="form-control" id="timeriderreachesrestaurant" name="timeriderreachesrestaurant">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-		<a href="/postTimeReachedRes/<%= oid%>" style="float:right; padding: 20; border: none; cursor:pointer">Next</a>
-        <!-- <button onclick="goBack()" style="padding: 0; border: none; background: none; cursor:pointer; color:blue">Back</button> -->
+        </form>
+		<a href="/postTimeLeftRes/<%= oid%>" style="float:right; padding: 20; border: none; cursor:pointer">Next</a>
+
+        
 
         
 		<script>
