max order table and trigger added

--- a/App/views/driver/deliverOrder.ejs
+++ b/App/views/driver/deliverOrder.ejs
@@ -21,7 +21,7 @@
 		<form id="html_form" action="deliverOrder" role="form" method="post">
 			<div class="form-group">
 				<label for="timeriderdeparts">Time Departed</label>
-				<input type="datetime-local" class="form-control" id="timeriderdeparts name="timeriderdeparts">
+				<input type="datetime-local" class="form-control" id="timeriderdeparts" name="timeriderdeparts">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
