--- a/App/views/driver/postTimeDelivered.ejs
+++ b/App/views/driver/postTimeDelivered.ejs
@@ -31,10 +31,10 @@
        
 		<script>
 
-        var uid = sessionStorage.getItem("uid");
-        window.alert(uid)    
+        // var uid = sessionStorage.getItem("uid");
+        // window.alert(uid)    
         
-        document.getElementById("uid").innerHTML = uid;
+        // document.getElementById("uid").innerHTML = uid;
 
         function goBack() {
                 window.history.back();
